Implementing Authorization and authenticated

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -4,7 +4,7 @@ spring.datasource.password=
 
 spring.datasource.sql-script-encoding=UTF-8
 
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.h2.console.path=/h2-console
