--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
-spring.profiles.active=test
+spring.profiles.active=${APP_PROFILE:test}
+
+spring.jpa.open-in-view=false
+
+spring.datasource.sql-script-encoding=UTF-8
+
+security.oauth2.client.client-id=${CLIENT_ID:moviecatalog}
+security.oauth2.client.client-secret=${CLIENT_SECRET:moviecatalog123}
+
+jwt.secret=${JWT_SECRET:MY-JWT-SECRET} 
+jwt.duration=${JWT_DURATION:86400}
